Commit correção ortografica

--- a/primeiroprojetoJavascript/index.html
+++ b/primeiroprojetoJavascript/index.html
@@ -29,7 +29,7 @@
             }
         </script>
     </div>
-    <div style="color:white ;" mt=2><script>document.write('Começe o encremento ou decremento, ' , nome.toUpperCase(), '.')</script></div>
+    <div style="color:white ;" mt=2><script>document.write('Começe o incremento ou decremento, ' , nome.toUpperCase(), '.')</script></div>
     <script src="assets/js/scripts.js"> 
     </script>
 </body>
